--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/horizon": "^5.30",
+        "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
+        "predis/predis": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
